# superfv

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  TODO.md  TestCpp.ipynb  TestCppCellAverages.ipynb  TestCppCellCenter.ipynb  TestCppCellCenters.ipynb  noxfile.py  pyproject.toml  test.ipynb
benchmarks/: Compare_ZS_with_APC-523.ipynb  Notebook.ipynb  SuperFV_Teyssier_comparison_for_SodShockTube1D.ipynb  kelvin_helmholtz_2d.py  kelvin_helmholtz_2d.slurm  nox-cp.slurm  nox.slurm  template.slurm  test-cp.slurm  test.slurm  typecheck.slurm
notebooks/: 1D_Advection.ipynb  1D_Advection_of_a_Square.ipynb  1D_Euler_advection.ipynb  1D_Flux_Strategies.ipynb  1D_MUSCL-Hancock_Advection_of_a_Square.ipynb  1D_Nonlinear_Sound_Wave_Test.ipynb  1D_Nonlinear_Sound_Wave_with_Teyssier.ipynb  1D_Sedov.ipynb  1D_Sine_Wave_Advection.ipynb  1D_Sod_Shock_Tube.ipynb  1D_Sod_Shock_Tube_Teyssier_Comparison.ipynb  1D_advection_with_passives.ipynb  1D_square_advection.ipynb  1d_MUSCL-Hancock_Sod_Shock_Tube.ipynb  2D_Advection_of_a_Square.ipynb  2D_Advection_of_a_Square_MOOD.ipynb  2D_MUSCL-Hancock_Advection_of_a_Square.ipynb  2D_Rotation_of_a_Slotted_Disk.ipynb  2D_Sedov.ipynb  2D_square_advection.ipynb  3D_Advection_of_a_Square.ipynb  3D_square_advection.ipynb  Advection_of_a_1D_Square_with_Passive_Variables.ipynb  Advection_of_a_2D_square_MUSCL-Hancock.ipynb  Advection_of_a_Square.ipynb  Advection_of_the_Composite_Profile.ipynb  Compare_MUSCL-Hancock_with_APC-523.ipynb  Compare_ZS_with_APC-523.ipynb  Compare_with_SD.ipynb  Conservative_Interpolation_Stencils.ipynb  CuPy_vs_NumPy.ipynb  Decaying_Turbulence_1D.ipynb  Decaying_Turbulence_2D.ipynb  Decaying_Turbulence_2D_with_varying_mach_number.ipynb  Double_Mach_Reflection.ipynb  Entropy_Wave.ipynb  Entropy_Wave_1D.ipynb  Euler_nodes.ipynb  Example.ipynb  GaussLegendre_Mesh_Test.ipynb  (+39 more)
sd-compare/: Gresho-Vortex.ipynb  RTI.ipynb  Rayleigh-Taylor-MH.ipynb  Rayleigh-Taylor-RK3.ipynb  Rayleigh-Taylor.ipynb  Sine-Advection-RK3.ipynb  gresho_vortex.py  gresho_vortex.slurm  modified_wavenumber_analysis.ipynb  sine_wave_convergence.ipynb  sine_wave_convergence.py  sine_wave_convergence.slurm  square1d.ipynb  square2d.ipynb
shine/: __init__.py  advection_solver.py  boundary_conditions.py  explicit_ODE_solver.py  finite_volume_solver.py  initial_conditions.py  ode.py  stencil.py  visualization.py
superfv/: MOOD.py  __init__.py  advection_solver.py  axes.py  boundary_conditions.py  configs.py  cuda_params.py  euler_solver.py  explicit_ODE_solver.py  field.py  finite_volume_driver.py  (+19 more)
(+215 files in other folders)
