[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superfv"
version = "0.1.0"
description = "A solver library for mathematical and computational problems"
authors = [
    { name = "Jonathan Palafoutas", email = "jpalafou@princeton.edu" }
]
    license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "pandas",
    "rationalpy",
    "stencilpal @ git+https://github.com/jpalafou/stencilpal.git",
    "wtflux @ git+https://github.com/jpalafou/wtflux.git",
]

[project.optional-dependencies]
dev = ["nox", "pandas-stubs", "pre-commit"]
typecheck = ["mypy", "types-tqdm"]
test = ["pytest"]

[tool.setuptools]
packages = ["superfv", "teyssier"]

[tool.mypy]
mypy_path = "stubs"
