[build-system]
requires = ["setuptools>=61.2", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "superfv"
version = "0.1.0"
description = "A solver library for mathematical and computational problems"
authors = [
    { name = "Jonathan Palafoutas", email = "jpalafou@princeton.edu" }
]
    license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["nox", "pre-commit"]
typecheck = ["mypy", "types-PyYAML"]
test = ["pytest"]

[tool.setuptools]
packages = ["superfv", "teyssier"]
ext-modules = [
    {name = "superfv.bin._finite_volume_driver", sources = ["superfv/cpp/update_fv_fluxes.cpp"], include-dirs = ["/opt/homebrew/include"], language = "c++", extra-compile-args = ["-std=c++17"]},
]

[tool.mypy]
mypy_path = "stubs"

[tool.ruff.lint]
ignore = ["E741"]
