[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superfv"
version = "0.1.0"
description = "A solver library for mathematical and computational problems"
authors = [
    { name = "Jonathan Palafoutas", email = "jpalafou@princeton.edu" }
]
    license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["nox", "pre-commit"]
typecheck = ["mypy", "types-PyYAML"]
test = ["pytest"]

[tool.setuptools]
packages = ["superfv", "teyssier"]

[tool.ruff.lint]
ignore = ["E741"]
